remove unused headers

fixes build when using newer networkmanager / kde-workspace as a base

BUG:324819